# ai-agent-redteam

./: .env.example  .gitignore  Makefile  README.md  demo_researcher_notes.py  dockerfile  pyproject.toml
configs/: settings.yaml
data/dashboard/: index.html  streamlit_runs.csv
docs/: commands.md  defense_v1.md  m1_report.md  overview.md  product-requirements.md  project-plan.md  results.md  threat_model.md
poisoned_site/: faq.html  index.html  notes.md
scripts/: asr_compare.py  build_dashboard.py  demo.sh  doctor.sh  leaderboard.py  release_m1.sh  release_m2.sh  run_ablation.sh  run_attack.sh  run_clean.sh  seed_poison.sh  serve_poison.sh
src/: app.py  pipeline.py  telemetry.py
src/agents/: base.py  emailer.py  researcher.py  scheduler.py  summarizer.py
src/ai_agent_redteam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/attacks/: variants.py
src/cranium_ai_agent_redteam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/detect/: regex_detector.py
src/eval/: asr_harness.py  batch_runner.py  eval_detector.py  plot_asr.py
src/llm/: base.py  openai_client.py
src/policy/: ablations.py  allowlist.py  consent.py  profiles.py  system_prompt.py
src/tools/: webloader.py
src/utils/: config.py  io.py  jsonsafe.py  output_filter.py  retry.py  sanitize.py  schema.py
streamlit_app/: README_STREAMLIT.md  __init__.py  app.py  utils.py
