[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-redteam"
version = "0.1.0"
description = "Multi-agent indirect prompt injection red-team demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4",
  "pyyaml",
  "tqdm",
  "pyyaml",
  "python-dotenv",
  "requests",
]

[tool.setuptools.packages.find]
where = ["src"]   
