[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-redteam"
version = "0.1.0"
description = "Multi-agent indirect prompt injection red-team demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4",
  "pyyaml",
  "tqdm",
  "python-dotenv>=1.0",
  "requests",
  "httpx>=0.27",
  "pydantic>=2.0",
  "streamlit>=1.28.0",
  "pandas>=2.0.0",
  "altair>=5.0.0",
  "python-dateutil>=2.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]   
